# binary_search

./: README.md  pyproject.toml  setup.cfg
src/: __init__.py  extern.py
src/binary_search/: extern.py  py_implement.py  validation.py
