[metadata]
name = binsearch
version = 0.0.1
author = Frostbite
author_email = frostbiteofthecold@protonmail.com
description = A library to perform C and Python binary searches.
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/sugarscrub123/binary_search
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
